--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
+    "lightgallery": "^2.7.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-data-table-component": "^7.5.3",
